fix overflow issue

--- a/apps/src/assets/scss/app.scss
+++ b/apps/src/assets/scss/app.scss
@@ -7,6 +7,7 @@ html,
 body {
   font-family: 'Source Sans 3', sans-serif;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 // vars
